# chemistry_lib

./: .gitignore  README.md  pyproject.toml
chempkg/: atom.py  main.py  mol.py  reaction_utils.py
tests/: test_atom.py  test_mol.py
