[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chemistry_lib"
version = "0.1.0"
description = "Librairie de chimie basique"
authors = [
  { name = "Elisa", email = "elisa.kaing@etu.sorbonne-universite.fr" },
]
requires-python = ">=3.13"
dependencies = [
    "numpy", "matplotlib"
]

[tool.pytest.ini_options]
pythonpath = "." # pour pytest
testpaths = ["tests"]